--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Common.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
     <Compile Include="Interface\BulkFGT\IFabricCrkShrkTest_Service.cs" />
+    <Compile Include="Interface\BulkFGT\IMockupOvenService.cs" />
     <Compile Include="Interface\BulkFGT\IMockupWashService.cs" />
     <Compile Include="Interface\BulkFGT\IFabricOvenTestService.cs" />
     <Compile Include="Interface\BulkFGT\IMockupCrockingService.cs" />
@@ -122,6 +123,7 @@
     <Compile Include="Service\BulkFGT\AccessoryOvenWashService.cs" />
     <Compile Include="Service\BulkFGT\FabricOvenTestService.cs" />
     <Compile Include="Service\BulkFGT\FabricCrkShrkTest_Service.cs" />
+    <Compile Include="Service\BulkFGT\MockupOvenService.cs" />
     <Compile Include="Service\BulkFGT\MockupWashService.cs" />
     <Compile Include="Service\BulkFGT\MockupCrockingService.cs" />
     <Compile Include="Service\BulkFGT\SearchListService.cs" />
