--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -114,6 +114,8 @@
     <Compile Include="ProductionDB\Garment_Detail_Spirality.cs" />
     <Compile Include="ProductionDB\MockupCrocking.cs" />
     <Compile Include="ProductionDB\MockupCrocking_Detail.cs" />
+    <Compile Include="ProductionDB\MockupOven.cs" />
+    <Compile Include="ProductionDB\MockupOven_Detail.cs" />
     <Compile Include="ProductionDB\MockupWash.cs" />
     <Compile Include="ProductionDB\MockupWash_Detail.cs" />
     <Compile Include="ProductionDB\NewCDCode.cs" />
@@ -135,6 +137,7 @@
     <Compile Include="Public\CompareBase.cs" />
     <Compile Include="Public\WindowModel.cs" />
     <Compile Include="RequestModel\FinalInspection_Query.cs" />
+    <Compile Include="RequestModel\MockupOven_Request.cs" />
     <Compile Include="RequestModel\MockupWash_Request.cs" />
     <Compile Include="RequestModel\MockupCrocking_Request.cs" />
     <Compile Include="RequestModel\FinalInspection_Request.cs" />
@@ -169,7 +172,8 @@
     <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_FGWT_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\GarmentTest_Detail_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\GarmentTest_ViewModel.cs" />
-    <Compile Include="ViewModel\BulkFGT\MockupWashs_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\MockupOven_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\MockupWash_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\PullingTest_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\SearchList_ViewModel.cs" />
     <Compile Include="ViewModel\FinalInspection\AddDefect.cs" />
@@ -187,7 +191,7 @@
     <Compile Include="ViewModel\Inspection_ViewModel.cs" />
     <Compile Include="ViewModel\ReworkList_ViewModel.cs" />
     <Compile Include="ViewModel\SampleRFT\CFTComments_ViewModel.cs" />
-    <Compile Include="ViewModel\BulkFGT\MockupCrockings_ViewModel.cs" />
+    <Compile Include="ViewModel\BulkFGT\MockupCrocking_ViewModel.cs" />
     <Compile Include="ViewModel\RFTPerLine_ViewModel.cs" />
     <Compile Include="ViewModel\RFT_Inspection_Measurement_ViewModel.cs" />
     <Compile Include="ViewModel\RFT_OrderComments_ViewModel.cs" />
