--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -162,6 +162,7 @@
     <Compile Include="ResultModel\Quality_MailGroup_ResultModel.cs" />
     <Compile Include="ResultModel\Quality_Position.cs" />
     <Compile Include="ResultModel\StyleList.cs" />
+    <Compile Include="ResultModel\StyleManagement_Request.cs" />
     <Compile Include="ResultModel\UserList.cs" />
     <Compile Include="ResultModel\UserList_Authority.cs" />
     <Compile Include="ResultModel\UserList_Browse.cs" />
@@ -189,6 +190,7 @@
     <Compile Include="ResultModel\GarmentTest_Result.cs" />
     <Compile Include="ViewModel\InspectionSave_ViewModel.cs" />
     <Compile Include="ViewModel\Inspection_ViewModel.cs" />
+    <Compile Include="ViewModel\PrintBarcode_ViewModel.cs" />
     <Compile Include="ViewModel\ReworkList_ViewModel.cs" />
     <Compile Include="ViewModel\SampleRFT\CFTComments_ViewModel.cs" />
     <Compile Include="ViewModel\BulkFGT\MockupCrocking_ViewModel.cs" />
@@ -197,6 +199,7 @@
     <Compile Include="ViewModel\RFT_OrderComments_ViewModel.cs" />
     <Compile Include="ViewModel\RFT_PicDuringDummyFitting_ViewModel.cs" />
     <Compile Include="ViewModel\SelectItem_ViewModel.cs" />
+    <Compile Include="ViewModel\StyleResult_ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
