ISP20211067 加入Style_Artwork結構 增加取得Style_Artwork.ArtworkTypeID

--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -130,6 +130,7 @@
     <Compile Include="ProductionDB\SewingLine.cs" />
     <Compile Include="ProductionDB\Style.cs" />
     <Compile Include="ProductionDB\Style_Article.cs" />
+    <Compile Include="ProductionDB\Style_Artwork.cs" />
     <Compile Include="ProductionDB\Style_BOA.cs" />
     <Compile Include="ProductionDB\System.cs" />
     <Compile Include="ProductionDB\TPEPass1.cs" />
@@ -137,6 +138,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Public\CompareBase.cs" />
     <Compile Include="Public\WindowModel.cs" />
+    <Compile Include="RequestModel\StyleArtwork_Request.cs" />
     <Compile Include="RequestModel\FinalInspection_Query.cs" />
     <Compile Include="RequestModel\MockupOven_Request.cs" />
     <Compile Include="RequestModel\AccessoryRefNo_Request.cs" />
