--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="Common.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
+    <Compile Include="Interface\BulkFGT\IFabricColorFastness_Service.cs" />
     <Compile Include="Interface\BulkFGT\IFabricCrkShrkTest_Service.cs" />
     <Compile Include="Interface\BulkFGT\IMockupOvenService.cs" />
     <Compile Include="Interface\BulkFGT\IMockupWashService.cs" />
@@ -121,6 +122,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Authority\AuthorityService.cs" />
     <Compile Include="Service\BulkFGT\AccessoryOvenWashService.cs" />
+    <Compile Include="Service\BulkFGT\FabricColorFastness_Service.cs" />
     <Compile Include="Service\BulkFGT\FabricOvenTestService.cs" />
     <Compile Include="Service\BulkFGT\FabricCrkShrkTest_Service.cs" />
     <Compile Include="Service\BulkFGT\MockupOvenService.cs" />
