--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -59,6 +59,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\BulkFGT\FabricColorFastness_ServiceTests.cs" />
     <Compile Include="Service\BulkFGT\FabricOvenTestServiceTests.cs" />
     <Compile Include="Service\BulkFGT\GarmentTest_ServiceTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionAddDefectServiceTests.cs" />
