--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -345,6 +345,7 @@
     <Content Include="Areas\BulkFGT\Views\FabricCrkShrkTest\CrockingTest.cshtml" />
     <Content Include="Areas\BulkFGT\Views\FabricCrkShrkTest\HeatTest.cshtml" />
     <Content Include="Areas\BulkFGT\Views\FabricCrkShrkTest\WashTest.cshtml" />
+    <Content Include="Areas\BulkFGT\Views\FabricColorFastness\Detail.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -802,7 +803,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="XLT\MockupOven.xltx">
-		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="XLT\FabricCrockingTest.xltx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
