完成至Beautiful Product Audit

--- a/Quality/ADOHelper/ADOHelper.csproj
+++ b/Quality/ADOHelper/ADOHelper.csproj
@@ -58,5 +58,10 @@
       <Name>DatabaseObject</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
