--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -337,7 +337,7 @@
     <Content Include="Areas\BulkFGT\Views\MockupOvenTest\Index.cshtml" />
     <Content Include="Areas\BulkFGT\Views\FabricColorFastness\Index.cshtml" />
     <Content Include="Areas\FinalInspection\Views\Shared\PictureList.cshtml" />
-    <Content Include="Areas\FinalInspection\Views\Inspection\DefectPicture.cshtml" />
+    <Content Include="Areas\FinalInspection\Views\Inspection\FinalInspection_Picture.cshtml" />
     <Content Include="Areas\FinalInspection\Views\Inspection\TakePicture.cshtml" />
     <Content Include="Areas\FinalInspection\Views\Shared\ScreenShot.cshtml" />
     <Content Include="Areas\StyleManagement\Views\PrintBarcode\Index.cshtml" />
@@ -802,7 +802,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="XLT\MockupOven.xltx">
-		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="XLT\FabricCrockingTest.xltx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
