ISP20211066 SendMail加一個欄位, 主要用於夾在server上的報表 加Oven測試

--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Service\BulkFGT\FabricCrkShrkTest_ServiceTests.cs" />
     <Compile Include="Service\BulkFGT\FabricOvenTestServiceTests.cs" />
     <Compile Include="Service\BulkFGT\GarmentTest_ServiceTests.cs" />
+    <Compile Include="Service\BulkFGT\MockupOvenTests.cs" />
     <Compile Include="Service\BulkFGT\MockupWashTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionAddDefectServiceTests.cs" />
     <Compile Include="Service\FinalInspection\FinalInspectionBeautifulProductAuditServiceTests.cs" />
