ISP20211066 調整 ToPDF回傳

--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -163,6 +163,7 @@
     <Compile Include="ResultModel\FinalInspection\PoSelect_Result.cs" />
     <Compile Include="ResultModel\LogIn_Result.cs" />
     <Compile Include="ResultModel\Measurement_ResultModel.cs" />
+    <Compile Include="ResultModel\Report_Result.cs" />
     <Compile Include="ResultModel\SendMail_Result.cs" />
     <Compile Include="ResultModel\Module_Detail.cs" />
     <Compile Include="ResultModel\Quality_MailGroup_ResultModel.cs" />
