新增ColorFastness 後端程式碼

--- a/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
+++ b/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
@@ -34,6 +34,12 @@
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="Sci">
+      <HintPath>..\..\_Dll\Sci.dll</HintPath>
+    </Reference>
+    <Reference Include="Sci.Proj">
+      <HintPath>..\..\_Dll\Sci.Proj.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
