新增Color fastness ToPDF, ToExcel, 新增GetID功能

--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -124,6 +124,12 @@
     <Content Include="XLT\FabricHeatTest.xltx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="XLT\FabricColorFastness_ToExcel.xltx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="XLT\FabricColorFastness_ToPDF.xltx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="XLT\FabricOvenTestDetailReport.xltx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
