--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Public\CompareBase.cs" />
     <Compile Include="Public\WindowModel.cs" />
+    <Compile Include="RequestModel\MockupFailMail_Request.cs" />
     <Compile Include="RequestModel\StyleArtwork_Request.cs" />
     <Compile Include="RequestModel\FinalInspection_Query.cs" />
     <Compile Include="RequestModel\MockupOven_Request.cs" />
