--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -147,7 +147,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
+    
+    <add key="IsTest" value="true" />
+    
+    <!--解碼用-->
+    <add key="CryptoKey" value="scimis" />
+    
     <!--Email-->
     <add key="SmtpServer" value="Mail.sportscity.com.tw" />
     <add key="SmtpPort" value="25" />
@@ -155,10 +160,12 @@
     <add key="mailPwd" value="orpxof" />
 
     <!--測試區-->
+    <add key="WebHost" value="https://misap:1880/" />
     <add key="WebPortalURL" value="http://localhost:55680/Home/Login" />
     <add key="WebPortalURL_HomePage" value="http://localhost:55680/Home/Login" />
     <!--正式區-->
     <!--
+    <add key="WebHost" value="https://misap:1880/" />
     <add key="WebPortalURL" value="http://internalportal.sportscity.com.tw/" />
     <add key="WebPortalURL_HomePage" value="http://internalportal.sportscity.com.tw/Home/Index" />
     -->
