ISP20211061 -  調整Fabric Crocking & Shrinkage Test、Fabric Oven Test。增加OnlineHelp

--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -169,6 +169,8 @@
     <add key="WebPortalURL" value="http://internalportal.sportscity.com.tw/" />
     <add key="WebPortalURL_HomePage" value="http://internalportal.sportscity.com.tw/Home/Index" />
     -->
+    
+    <add key="OnlineHelpURL" value="http://onlinehelp.sportscity.com.tw:8062/?OnLineHelpID=Quality." />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
