--- a/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
+++ b/Quality/ProductionDataAccessLayer/ProductionDataAccessLayer.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Provider\MSSQL\StyleBOAProvider.cs" />
     <Compile Include="Provider\MSSQL\StyleListProvider.cs" />
     <Compile Include="Provider\MSSQL\StyleManagementProvider.cs" />
+    <Compile Include="Provider\MSSQL\StyleManagement\StyleResultProvider.cs" />
     <Compile Include="Provider\MSSQL\StyleProvider.cs" />
     <Compile Include="Provider\MSSQL\SystemProvider.cs" />
     <Compile Include="Provider\MSSQL\TPEPass1Provider.cs" />
