--- a/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
+++ b/Quality/BusinessLogicLayerTests/BusinessLogicLayerTests.csproj
@@ -64,6 +64,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\Authority\AuthorityServiceTests.cs" />
     <Compile Include="Service\BulkFGT\FabricColorFastness_ServiceTests.cs" />
     <Compile Include="Service\BulkFGT\FabricCrkShrkTest_ServiceTests.cs" />
     <Compile Include="Service\BulkFGT\FabricOvenTestServiceTests.cs" />
