ISP20211170 - 新增Exception (FD) 功能

--- a/Quality/DatabaseObject/DatabaseObject.csproj
+++ b/Quality/DatabaseObject/DatabaseObject.csproj
@@ -211,6 +211,7 @@
     <Compile Include="ViewModel\SampleRFT\StyleResult_ViewModel.cs" />
     <Compile Include="ViewModel\SelectItem_ViewModel.cs" />
     <Compile Include="ViewModel\SampleRFT\PrintBarcode_ViewModel.cs" />
+    <Compile Include="ViewModel\StyleManagement\ExceptionFD_ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
