--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Service\SampleRFT\PicturesDummyService.cs" />
     <Compile Include="Service\SampleRFT\MeasurementService.cs" />
     <Compile Include="Service\SampleRFT\RFTPerLineService.cs" />
+    <Compile Include="Service\StyleManagement\ExceptionFDService.cs" />
     <Compile Include="Service\StyleManagement\StyleListService.cs" />
     <Compile Include="Service\StyleManagement\PrintBarcodeService.cs" />
     <Compile Include="Service\StyleManagement\StyleResultService.cs" />
