--- a/Quality/BusinessLogicLayer/app.config
+++ b/Quality/BusinessLogicLayer/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   如需如何設定 ASP.NET 應用程式的詳細資訊，請瀏覽
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -11,17 +11,17 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     
     
-    <add key="CryptoKey" value="scimis" />
+    <add key="CryptoKey" value="scimis"/>
 
     <!--Email-->
-    <add key="SmtpServer" value="Mail.sportscity.com.tw" />
-    <add key="SmtpPort" value="25" />
-    <add key="mailAccount" value="foxpro" />
-    <add key="mailPwd" value="orpxof" />
+    <add key="SmtpServer" value="Mail.sportscity.com.tw"/>
+    <add key="SmtpPort" value="25"/>
+    <add key="mailAccount" value="foxpro"/>
+    <add key="mailPwd" value="orpxof"/>
 
     <!--測試區-->
-    <add key="WebPortalURL" value="https://localhost:44398/Home/Login" />
-    <add key="WebPortalURL_HomePage" value="https://localhost:44398/Home/Login" />
+    <add key="WebPortalURL" value="https://localhost:44398/Home/Login"/>
+    <add key="WebPortalURL_HomePage" value="https://localhost:44398/Home/Login"/>
     <!--正式區-->
     <!--
     <add key="WebPortalURL" value="http://internalportal.sportscity.com.tw/" />
@@ -70,4 +70,4 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
