--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -124,7 +124,7 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    <add key="IsTest" value="true"/>
+    <add key="IsTest" value="false"/>
     <!--解碼用-->
     <add key="CryptoKey" value="scimis"/>
     <!--Email-->
