--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -125,6 +125,7 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="IsTest" value="false"/>
+    <add key="TestMailReceiver" value="benson.chung@sportscity.com.tw;willy.wei@sportscity.com.tw;jack.hsu@sportscity.com.tw;jeff.yeh@sportscity.com.tw;jimmy.liao@sportscity.com.tw"/>
     <!--解碼用-->
     <add key="CryptoKey" value="scimis"/>
     <!--Email-->
